--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@firebasegen/default": "file:generated/javascript/default",
     "animate.css": "^4.1.1",
     "bootstrap": "^5.3.3",
+    "firebase": "^10.14.0",
     "next": "14.2.14",
     "react": "18.3.1",
     "react-bootstrap": "^2.10.5",
